# FreakBot

./: .gitignore  main.py  pyproject.toml
src/: assistant.py  prewarm_fnc.py
